--- a/ativos/css/styles.css
+++ b/ativos/css/styles.css
@@ -9,9 +9,9 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
-    background-color: #f7f7f7; /* Fundo mais claro */
     color: #333; /* Cor de texto padrão */
     margin: 0;
+    background-color: #131313; /* Fundo escuro */
 }
 
 .container {
@@ -22,10 +22,11 @@ body {
 }
 
 /* Cabeçalho */
+/* Estilos gerais para o cabeçalho */
 .header {
-    background-color: #131313; /* Fundo escuro */
-    color: #dacdc3; /* Texto branco */
-    padding: 0.1rem 0;
+    background-color: #1c1c1c; /* Fundo escuro */
+    color: #efefef; /* Texto branco */
+    padding: 0.8rem 0; /* Espaçamento interno */
     position: sticky; /* Cabeçalho fixo no topo */
     top: 0;
     z-index: 1000;
@@ -37,6 +38,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 1200px; /* Largura máxima do conteúdo do cabeçalho */
+    margin: 0 auto; /* Centralizar o cabeçalho na tela */
 }
 
 .header .logo {
@@ -47,8 +50,13 @@ body {
     width: 100px; /* Logo um pouco menor */
 }
 
+.header .navbar {
+    display: flex;
+    align-items: center;
+}
+
 .header .navbar a {
-    color: #dacdc3;
+    color: #efefef;
     text-decoration: none;
     margin: 0 1rem;
     padding: 0.5rem;
@@ -56,7 +64,12 @@ body {
 }
 
 .header .navbar a:hover {
-    color: #A26E3B; /* Cor do hover */
+    color: #5b3124; /* Cor do hover */
+}
+
+.header .icons {
+    display: flex;
+    align-items: center;
 }
 
 .header .icons img {
@@ -71,12 +84,27 @@ body {
 
 /* Home */
 .home {
+    position: relative;
     background-image: url('../../img/fundo.jpg');
     background-size: cover;
     background-position: center;
-    color: #dacdc3;
+    color: #fff; /* Texto branco para contrastar com a imagem de fundo */
     text-align: center;
     padding: 40vh 0; /* Ajuste o padding conforme necessário */
+    overflow: hidden; /* Esconde conteúdo que estiver fora do container */
+}
+
+.home .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente preto */
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 600px; /* Largura máxima do conteúdo */
+    width: 90%; /* Largura ajustada para maior conteúdo */
+    transition: background-color 0.3s ease; /* Transição de cor suave */
 }
 
 .home h1 {
@@ -91,8 +119,8 @@ body {
 
 .home .btn {
     display: inline-block;
-    background-color: #A26E3B;
-    color: #131313;
+    background-color: #5b3124;
+    color: #efefef;
     padding: 1rem 2rem;
     text-decoration: none;
     border-radius: 5px;
@@ -101,9 +129,10 @@ body {
 }
 
 .home .btn:hover {
-    background-color: #131313;
-    color: #dacdc3;
+    background-color: #05bf1e;
+    color: #131313;
 }
+
 
 .modal {
     display: none; /* Inicia oculto */
@@ -113,17 +142,17 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+    background-color: rgb(0 0 0 / 0%);
     overflow: auto; /* Permite rolagem se o conteúdo for maior que a tela */
     color: #fff;
     align-items: center;
 }
 
 .modal-content {
-    background-color: #131313;
+    background-color: rgb(0 0 0 / 0%);
     margin: 15% auto; /* Centraliza verticalmente */
     padding: 20px;
-    border: 1px solid #dacdc3;
+    border: 1px solid #efefef;
     width: 80%;
     max-width: 600px; /* Largura máxima do modal */
     border-radius: 8px;
@@ -159,14 +188,14 @@ button {
     padding: 10px;
     font-size: 16px;
     border-radius: 4px;
-    border: 1px solid #dacdc3;
+    border: 1px solid #efefef;
     width: 100%;
     box-sizing: border-box;
 }
 
 button.btn {
-    background-color: #A26E3B;
-    color:#dacdc3;
+    background-color: #5b3124;
+    color:#efefef;
     border: none;
     cursor: pointer;
 }
@@ -178,9 +207,10 @@ button.btn:hover {
 
 /* Seção de Serviços */
 .services {
-    background-color: #dacdc3;
+    background-color: rgb(0 0 0 / 0%);
     padding: 4rem 0;
     text-align: center;
+    color: #efefef;
 }
 
 .services .title {
@@ -198,12 +228,12 @@ button.btn:hover {
 
 .service {
     flex: 1 1 300px;
-    background-color: #131313;
+    background-color: #313030;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    color: #f7f7f7;
+    color: #efefef;
 
 }
 
@@ -224,21 +254,22 @@ button.btn:hover {
 
 .service p {
     font-size: 1rem;
-    color:  #f7f7f7;
+    color:  #efefef;
     ;
 }
 
 /* Seção de Produtos */
 .products {
-    background-color: #131313;
+  background-color: #313030;
     padding: 4rem 0;
     text-align: center;
+    color: #efefef;
 }
 
 .products .title {
     font-size: 2.5rem;
     margin-bottom: 2rem;
-    color: #f7f7f7;
+    color: #efefef;
 
 }
 
@@ -252,7 +283,7 @@ button.btn:hover {
 
 .product {
     flex: 1 1 300px;
-    background-color: #dacdc3;
+    background-color: #131313;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -280,7 +311,7 @@ button.btn:hover {
 
 /* Seção de Equipe */
 .team {
-    background-color: #dacdc3;
+  background-color: #131313;
     padding: 4rem 0;
     text-align: center;
 }
@@ -300,27 +331,26 @@ button.btn:hover {
 
 .member {
     flex: 1 1 calc(63.33% - 1rem); /* Utiliza 33.33% do espaço, descontando o gap */
-    background-color: #131313;
+    background-color: #141414;
     padding: 2rem;
     border-radius: 30px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    color: #f7f7f7;
+    color: #efefef;
     text-align: center;
 }
 
 .member:hover {
-    transform: translateY(-10px);
+    transform: translateY(10px);
 }
 
 .member img {
-    width: 50px; /* Largura fixa para garantir um círculo perfeito */
-    height: 300px; /* Altura fixa para garantir um círculo perfeito */
-    object-fit: cover; /* Ajusta a imagem para cobrir todo o espaço */
-    border-radius: 100px; /* Transforma a imagem em um círculo */
+    width: 100%;
+    height: auto; /* Para manter a proporção original da imagem */
+    max-width: 150px; /* Largura máxima para evitar que a imagem fique muito grande */
+    border-radius: 100%; /* Transforma a imagem em um círculo */
     margin-bottom: 1rem; /* Espaço abaixo da imagem */
 }
-
 
 
 .member h3 {
@@ -334,7 +364,7 @@ button.btn:hover {
 
 /* Seção de Avaliações */
 .reviews {
-    background-color: #131313;
+    background-color: #313030;
     padding: 4rem 0;
     text-align: center;
 }
@@ -342,6 +372,7 @@ button.btn:hover {
 .reviews .title {
     font-size: 2.5rem;
     margin-bottom: 2rem;
+    color: #efefef;
 }
 
 .review-container {
@@ -354,11 +385,12 @@ button.btn:hover {
 
 .review {
     flex: 1 1 300px;
-    background-color: #dacdc3;
+    background-color: #313030;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
+    color: #efefef;
 }
 
 .review:hover {
@@ -366,11 +398,13 @@ button.btn:hover {
 }
 
 .review img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
+    width: 100%;
+    height: auto; /* Para manter a proporção original da imagem */
+    max-width: 150px; /* Largura máxima para evitar que a imagem fique muito grande */
+    border-radius: 50%; /* Transforma a imagem em um círculo */
+    margin-bottom: 1rem; /* Espaço abaixo da imagem */
 }
+
 
 .review p {
     font-size: 1.1rem;
@@ -395,8 +429,8 @@ button.btn:hover {
 
 /* Seção de Contato */
 .contact {
-    background-color: #222;
-    color: #dacdc3;
+    background-color: #313030;
+    color: #efefef;
     padding: 4rem 0;
     text-align: center;
 }
@@ -427,8 +461,8 @@ button.btn:hover {
 
 .contact-form button {
     display: inline-block;
-    background-color: #A26E3B;
-    color: #dacdc3;
+    background-color: #5b3124;
+    color: #efefef;
     padding: 1rem 2rem;
     border: none;
     border-radius: 5px;
@@ -438,13 +472,13 @@ button.btn:hover {
 }
 
 .contact-form button:hover {
-    background-color: #A26E3B;
+    background-color: #5b3124;
 }
 
 /* Rodapé */
 .footer {
-    background-color: #333;
-    color: #dacdc3;
+    background-color: #131313;
+    color: #efefef;
     text-align: center;
     padding: 1rem 0;
     margin-top: 4rem;
@@ -452,6 +486,7 @@ button.btn:hover {
 
 .footer p {
     margin-bottom: 0.5rem;
+    color: #efefef;
 }
 
 .social-icons a {
@@ -468,8 +503,8 @@ button.btn:hover {
     position: fixed;
     bottom: 20px;
     right: 90px; /* Espaço adicional para evitar sobreposição */
-    background-color: #019b09;
-    color: #019b09;
+    background-color: #131313;
+    color: #efefef;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -481,7 +516,7 @@ button.btn:hover {
 }
 
 .whatsapp-button:hover {
-    background-color: #019b09;
+    background-color: #05bf1e;
 }
 
 /* Botão Flutuante de Topo */
@@ -489,8 +524,8 @@ button.btn:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #007bff;
-    color: white;
+    background-color: #131313;
+    color: #efefef;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -502,20 +537,22 @@ button.btn:hover {
 }
 
 .floating-button:hover {
-    background-color: #0056b3;
+    background-color: #5b3124;
 }
 
+/* Seção de Preços */
 /* Seção de Preços */
 .pricing {
     background-color: #131313;
     padding: 80px 0;
     text-align: center;
+    border-color: #efefef;
 }
 
 .pricing h2 {
     font-size: 2.5rem;
     margin-bottom: 30px;
-    color: #333;
+    color: #efefef; /* Cor do texto do título */
 }
 
 .price-table {
@@ -524,41 +561,48 @@ button.btn:hover {
     align-items: flex-start;
     gap: 30px;
     margin-top: 40px;
+    flex-wrap: wrap; /* Permitir que os cards de preço quebrem para a próxima linha em telas menores */
 }
 
 .price-card {
-    background-color: #dacdc3;
+    background-color: #313030;
     border-radius: 10px;
-    padding: 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    box-shadow: 0 4px 15px #313030;
     flex: 1;
-    max-width: 300px;
+    max-width: 550px;
     text-align: center;
+    transition: transform 0.3s ease;
+    margin-bottom: 30px; /* Espaçamento entre os cards */
+}
+
+.price-card:hover {
+    transform: translateY(-5px); /* Levanta um pouco ao passar o mouse */
 }
 
 .price-card h3 {
-    font-size: 1.8rem;
-    color: #333;
+    font-size: 2rem; /* Um pouco maior para destaque */
+    color: #efefef; /* Amarelo para o título */
     margin-bottom: 20px;
 }
 
 .price-card p {
-    color: #666;
-    margin-bottom: 30px;
+    color: #ccc; /* Texto mais claro para descrição */
+    margin-bottom: 20px; /* Menor margem abaixo do texto */
 }
 
 .price-card .price {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #fcef00;
+    color: #fcef00; /* Amarelo para preço */
     margin-bottom: 20px;
 }
 
 .price-card .duration {
     font-size: 1.2rem;
-    color: #999;
+    color: #efefef;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin-bottom: 20px; /* Menor margem abaixo da duração */
 }
 
 .price-card ul {
@@ -569,29 +613,29 @@ button.btn:hover {
 
 .price-card ul li {
     margin-bottom: 10px;
-    color: #666;
+    color: #ccc; /* Cinza mais claro para itens da lista */
 }
 
 .price-card a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #333;
-    color: #dacdc3;
+    background-color: #5b3124; /* Amarelo para botões */
+    color: #efefef; /* Texto escuro para botões */
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
 .price-card a:hover {
-    background-color: #555;
+    background-color: #05bf1e; /* Amarelo mais escuro no hover */
+    color: #131313; /* Texto escuro para botões */
 }
-
-
 /* Seção de Equipe */
 .team {
-    background-color: #dacdc3;
+    background-color:#313030;
     padding: 4rem 0;
     text-align: center;
+    color: #efefef;
 }
 
 .team .title {
@@ -657,7 +701,7 @@ button.btn:hover {
 
 .review {
     flex: 1 1 300px;
-    background-color: #dacdc3;
+    background-color: #313030;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -699,7 +743,7 @@ button.btn:hover {
 /* Seção de Contato */
 .contact {
     background-color: #222;
-    color: #dacdc3;
+    color: #efefef;
     padding: 4rem 0;
     text-align: center;
 }
@@ -730,8 +774,8 @@ button.btn:hover {
 
 .contact-form button {
     display: inline-block;
-    background-color: #A26E3B;
-    color: #dacdc3;
+    background-color: #5b3124;
+    color: #efefef;
     padding: 1rem 2rem;
     border: none;
     border-radius: 5px;
@@ -741,16 +785,16 @@ button.btn:hover {
 }
 
 .contact-form button:hover {
-    background-color: #A26E3B;
+    background-color: #5b3124;
 }
 
 /* Rodapé */
 .footer {
-    background-color: #333;
-    color: #dacdc3;
+    background-color: #131313;
+    color: #efefef;
     text-align: center;
     padding: 1rem 0;
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 .footer p {
