--- a/ativos/css/styles.css
+++ b/ativos/css/styles.css
@@ -9,77 +9,140 @@
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.6;
-    color: #333; /* Cor de texto padrão */
+    color: #efefef;
     margin: 0;
-    background-color: #131313; /* Fundo escuro */
+    background-color: #131313;
 }
 
 .container {
-    width: 90%; /* Largura ajustada para maior conteúdo */
-    max-width: 1200px; /* Largura máxima do conteúdo */
+    width: 90%;
+    max-width: 1200px;
     margin: auto;
-    overflow: hidden; /* Evitar overflow horizontal */
+    overflow: hidden;
 }
 
 /* Cabeçalho */
-/* Estilos gerais para o cabeçalho */
 .header {
-    background-color: #1c1c1c; /* Fundo escuro */
-    color: #efefef; /* Texto branco */
-    padding: 0.8rem 0; /* Espaçamento interno */
-    position: sticky; /* Cabeçalho fixo no topo */
+    background-color: #1c1c1c;
+    padding: 0.8rem 1rem; /* Reduzir padding no cabeçalho para telas pequenas */
+    position: sticky;
     top: 0;
     z-index: 1000;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Sombra sutil */
-    transition: background-color 0.3s ease; /* Transição de cor suave */
-}
-
-.header section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px; /* Largura máxima do conteúdo do cabeçalho */
-    margin: 0 auto; /* Centralizar o cabeçalho na tela */
-}
-
-.header .logo {
-    margin-left: 1rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    display: flex; /* Tornar o cabeçalho flexível */
+    justify-content: space-between; /* Espaço entre os elementos */
+    align-items: center; /* Centralizar verticalmente os itens */
 }
 
 .header .logo img {
-    width: 100px; /* Logo um pouco menor */
+    width: 100px;
 }
 
 .header .navbar {
+    flex: 1;
     display: flex;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-bottom: 20px;
+    margin-top: -50px;
+    align-content: flex-end;
+}
+
+.header .navbar ul {
+    display: flex; /* Exibir lista de navegação */
+    list-style-type: none; /* Remover marcadores de lista */
+    margin: 0;
+    padding: 0;
+}
+
+.header .navbar li {
+    margin: 0 15px; /* Espaçamento entre os itens do menu */
 }
 
 .header .navbar a {
     color: #efefef;
     text-decoration: none;
-    margin: 0 1rem;
-    padding: 0.5rem;
-    transition: color 0.3s ease; /* Transição de cor suave */
+    padding: 0.8rem; /* Aumentar o espaço de clique nos links */
+    transition: color 0.3s ease;
 }
 
 .header .navbar a:hover {
-    color: #5b3124; /* Cor do hover */
+    color: #5b3124;
 }
+
 
 .header .icons {
-    display: flex;
-    align-items: center;
+    display:flexbox; /* Exibir ícones em linha */
+    align-items: center; /* Centralizar verticalmente */
 }
 
-.header .icons img {
-    margin-left: 1rem;
-    cursor: pointer;
-    transition: transform 0.3s ease; /* Efeito de escala suave */
+.icon {
+    font-size: 24px;
+    color: #ffffff;
+    margin-right: 10px;
+    transition: color 0.3s ease;
+    margin-left: 20px; /* Espaçamento entre os ícones */
 }
 
-.header .icons img:hover {
-    transform: scale(1.2); /* Escala ao passar o mouse */
+.icon:hover {
+    color: #5b3124;
+}
+
+/* Estilo do menu hamburguer */
+.menu-toggle {
+    display: none; /* Inicialmente oculto em telas maiores */
+    color: #efefef; /* Cor do ícone */
+    font-size: 24px; /* Tamanho do ícone */
+    cursor: pointer; /* Cursor ao passar o mouse */
+}
+
+.menu-toggle:hover {
+    color: #5b3124; /* Cor do ícone ao passar o mouse */
+}
+
+
+/* Menu móvel */
+.mobile-menu {
+    display: none; /* Inicialmente oculto */
+    position: absolute;
+    top: 100%; /* Abaixo do cabeçalho */
+    left: 0;
+    width: 100%;
+    background-color: #1c1c1c; /* Fundo do menu */
+    color: #efefef; /* Cor do texto */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
+    z-index: 999; /* Acima dos outros elementos */
+}
+
+.mobile-menu ul {
+    list-style-type: none; /* Remover marcadores de lista */
+    padding: 0;
+}
+
+.mobile-menu ul li {
+    padding: 10px 0; /* Espaçamento interno dos itens do menu */
+    text-align: center; /* Centralizar texto */
+}
+
+.mobile-menu ul li a {
+    display: block; /* Transformar em bloco para ocupar toda a largura */
+    color: inherit; /* Cor do texto */
+    text-decoration: none; /* Remover sublinhado */
+    font-size: 1.2rem; /* Tamanho do texto */
+    padding: 10px; /* Espaçamento interno */
+    transition: color 0.3s ease; /* Transição suave de cor */
+}
+
+.mobile-menu ul li a:hover {
+    color: #5b3124; /* Cor do texto ao passar o mouse */
+}
+
+/* Mostrar o menu hamburguer quando estiver aberto */
+.mobile-menu.active {
+    display: block;
 }
 
 /* Home */
@@ -90,7 +153,7 @@ body {
     background-position: center;
     color: #fff; /* Texto branco para contrastar com a imagem de fundo */
     text-align: center;
-    padding: 40vh 0; /* Ajuste o padding conforme necessário */
+    padding: 30vh 0; /* Ajuste o padding conforme necessário */
     overflow: hidden; /* Esconde conteúdo que estiver fora do container */
 }
 
@@ -98,6 +161,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    bottom: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente preto */
     padding: 20px;
@@ -133,7 +197,7 @@ body {
     color: #131313;
 }
 
-
+/* Estilos para o modal */
 .modal {
     display: none; /* Inicia oculto */
     position: fixed; /* Permanece fixo na tela */
@@ -142,33 +206,35 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 / 0%);
+    background-color: rgba(0, 0, 0, 0.6); /* Fundo semi-transparente */
     overflow: auto; /* Permite rolagem se o conteúdo for maior que a tela */
-    color: #fff;
+    color: #fff; /* Cor do texto */
     align-items: center;
 }
 
+/* Conteúdo do modal */
 .modal-content {
-    background-color: rgb(0 0 0 / 0%);
-    margin: 15% auto; /* Centraliza verticalmente */
+    background-color: #1a1a1a; /* Cor de fundo do modal */
+    margin: 10% auto; /* Centraliza verticalmente */
     padding: 20px;
-    border: 1px solid #efefef;
-    width: 80%;
+    border: 1px solid #333; /* Borda do modal */
+    width: 80%; /* Largura do modal */
     max-width: 600px; /* Largura máxima do modal */
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px; /* Cantos arredondados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra do modal */
 }
 
+/* Botão para fechar o modal */
 .close {
-    color: #fff;
+    color: #fff; /* Cor do ícone */
     float: right;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: #ccc; /* Cor do ícone ao passar o mouse */
     text-decoration: none;
     cursor: pointer;
 }
@@ -180,7 +246,7 @@ form {
 }
 
 label {
-    font-weight: bold;
+    font-weight: bold; /* Texto em negrito */
 }
 
 select,
@@ -188,22 +254,63 @@ button {
     padding: 10px;
     font-size: 16px;
     border-radius: 4px;
-    border: 1px solid #efefef;
+    border: 1px solid #ccc; /* Borda dos elementos */
     width: 100%;
     box-sizing: border-box;
 }
 
 button.btn {
-    background-color: #5b3124;
-    color:#efefef;
+    background-color: #4CAF50; /* Cor de fundo do botão */
+    color: #fff; /* Cor do texto do botão */
     border: none;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Transição suave */
 }
 
 button.btn:hover {
-    background-color: #05bf1e;
-    color: #131313;
+    background-color: #45a049; /* Cor de fundo do botão ao passar o mouse */
 }
+
+/* Estilos para o calendário */
+#calendar {
+    max-width: 600px; /* Largura máxima do calendário */
+    margin: 20px auto; /* Centraliza o calendário na página */
+    padding: 20px;
+    background-color: #ffffff; /* Cor de fundo do calendário */
+    border: 1px solid #ddd; /* Borda do calendário */
+    border-radius: 8px; /* Cantos arredondados */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra do calendário */
+}
+
+/* Estilos para os dias do calendário */
+.fc-day {
+    background-color: #000000; /* Cor de fundo dos dias do calendário */
+    border: 1px solid #ddd; /* Borda dos dias do calendário */
+}
+
+/* Estilo para o texto dos eventos no calendário */
+.fc-event-title {
+    font-size: 14px;
+    color: #333; /* Cor do texto dos eventos */
+}
+
+/* Estilo para a borda dos eventos no calendário */
+.fc-event {
+    border-color: #4CAF50; /* Cor da borda dos eventos */
+}
+
+.fas.fa-star {
+    /* Estilos para a estrela sólida */
+    color: #ffd700; /* Cor amarela da estrela */
+    font-size: 24px; /* Tamanho do ícone */
+}
+.fa-bars:before {
+    content: "\f0c9";
+    color: #efefef;
+}
+
+
+
 
 /* Seção de Serviços */
 .services {
@@ -348,7 +455,7 @@ button.btn:hover {
     width: 100%;
     height: auto; /* Para manter a proporção original da imagem */
     max-width: 150px; /* Largura máxima para evitar que a imagem fique muito grande */
-    border-radius: 100%; /* Transforma a imagem em um círculo */
+    border-radius: 50%; /* Transforma a imagem em um círculo */
     margin-bottom: 1rem; /* Espaço abaixo da imagem */
 }
 
@@ -360,6 +467,14 @@ button.btn:hover {
 
 .member p {
     font-size: 1rem;
+}
+.member img,
+.review img {
+    width: 150px; /* Tamanho fixo para manter a proporção */
+    height: 150px; /* Tamanho fixo para manter a proporção */
+    object-fit: cover; /* Ajuste para manter a proporção e preencher */
+    border-radius: 50%; /* Transforma a imagem em um círculo */
+    margin-bottom: 1rem;
 }
 
 /* Seção de Avaliações */
@@ -474,6 +589,40 @@ button.btn:hover {
 .contact-form button:hover {
     background-color: #5b3124;
 }
+.map {
+    background-color: #131313; /* Cor de fundo */
+    padding: 80px 0; /* Espaçamento interno */
+    text-align: center; /* Alinhamento do conteúdo */
+}
+
+.map h2 {
+    font-size: 3rem;
+    margin-bottom: 20px; /* Espaçamento inferior do título */
+    color: #ffffff; /* Cor do texto */
+}
+
+.map-container {
+    max-width: 100%; /* Largura máxima do container do mapa */
+    overflow: hidden; /* Evita que o mapa vaze para fora do container */
+}
+
+.responsive-map {
+    position: relative; /* Garante a proporção do aspecto */
+    overflow: hidden; /* Mantém o iframe dentro do container */
+    width: 100%; /* Ocupa toda a largura disponível */
+    padding-top: 56.25%; /* Proporção 16:9 (56.25% = 9 / 16 * 100) */
+}
+
+.responsive-map iframe {
+    position: absolute; /* Permite que o iframe ocupe toda a área do pai */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none; /* Remove a borda padrão do iframe */
+    border-radius: 20px;
+}
+
 
 /* Rodapé */
 .footer {
@@ -488,22 +637,36 @@ button.btn:hover {
     margin-bottom: 0.5rem;
     color: #efefef;
 }
+/* Estilos para os ícones de redes sociais */
+.social-icons {
+    position: fixed;
+    top: 50%;
+    transform: translateY(150%);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: self-start;
+}
 
 .social-icons a {
-    margin: 0 0.5rem;
+    margin-bottom: 10px; /* Espaçamento entre os ícones */
+    color: #fffcfc; /* Cor dos ícones */
+    font-size: 24px; /* Tamanho dos ícones */
+    text-decoration: none;
 }
 
-.social-icons img {
-    width: 30px;
-    height: 30px;
+/* Estilos para o ícone ativo (hover) */
+.social-icons a:hover {
+    color: #5b3124; /* Cor ao passar o mouse */
 }
+
 
 /* Botão Flutuante de WhatsApp */
 .whatsapp-button {
     position: fixed;
     bottom: 20px;
     right: 90px; /* Espaço adicional para evitar sobreposição */
-    background-color: #131313;
+    background-color: #000000;
     color: #efefef;
     width: 50px;
     height: 50px;
@@ -515,8 +678,23 @@ button.btn:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+
 .whatsapp-button:hover {
-    background-color: #05bf1e;
+    background-color: #000000;
+    transform: scale(1.1); /* Escala 10% maior */
+    animation: shake 0.5s ease-in-out infinite; /* Animação de shake */
+}
+
+@keyframes shake {
+    0%, 100% {
+        transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+        transform: translateX(-5px);
+    }
+    20%, 40%, 60%, 80% {
+        transform: translateX(5px);
+    }
 }
 
 /* Botão Flutuante de Topo */
@@ -808,4 +986,23 @@ button.btn:hover {
 .social-icons img {
     width: 30px;
     height: 30px;
+}
+/* Estilos da barra de rolagem */
+/* Estilos para navegadores WebKit (Safari, Chrome, etc.) */
+::-webkit-scrollbar {
+    width: 10px; /* largura da barra de rolagem */
+}
+
+::-webkit-scrollbar-track {
+    background: #131313; /* cor de fundo da pista */
+    border-radius: 10px; /* borda arredondada */
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888; /* cor do indicador de rolagem */
+    border-radius: 10px; /* borda arredondada */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; /* cor do indicador de rolagem ao passar o mouse */
 }
