--- a/ativos/css/responsivo.css
+++ b/ativos/css/responsivo.css
@@ -9,7 +9,7 @@
     }
 
     .header .navbar {
-        display: none; /* Ocultar menu principal */
+        display: none; /* Ocultar menu principal por padrão */
         flex-direction: column; /* Layout de coluna para o menu hamburguer */
         align-items: center; /* Centralizar verticalmente os itens */
         text-align: center; /* Centralizar texto */
@@ -50,31 +50,16 @@
         margin: 0 10px; /* Espaçamento entre os ícones */
     }
 
-    /* Estilo do menu hamburguer */
-    .menu-toggle {
-        display: block; /* Mostrar o ícone do menu hamburguer */
-        color: #333; /* Cor do ícone */
-        font-size: 24px; /* Tamanho do ícone */
-        cursor: pointer; /* Cursor ao passar o mouse */
-        margin-top: 10px; /* Espaçamento acima do menu hamburguer */
-        text-align: right; /* Alinhar à direita */
-    }
-
-    .menu-toggle:hover {
-        color: #5b3124; /* Cor do ícone ao passar o mouse */
-    }
-
     .mobile-menu {
-        display: none; /* Inicialmente oculto */
-        position: absolute;
+        position: absolute; /* Posição absoluta para cobrir a tela inteira */
         top: 100%; /* Abaixo do cabeçalho */
         left: 0;
         width: 100%;
         background-color: #1c1c1c; /* Fundo do menu */
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
         z-index: 999; /* Acima dos outros elementos */
+        display: none; /* Inicialmente oculto */
         color: #efefef; /* Cor do texto */
-
     }
 
     .mobile-menu ul {
@@ -109,7 +94,7 @@
 /* Estilos para telas menores que 576px (mobile) */
 @media screen and (max-width: 575px) {
     .header .logo img {
-        width: 80px; /* Reduzir tamanho do logo no cabeçalho */
+        width: 60px; /* Reduzir tamanho do logo no cabeçalho */
     }
 
     .header .navbar {
@@ -117,7 +102,6 @@
         justify-content: space-between; /* Espaço entre os itens e o menu hamburguer */
         align-items: center; /* Centralizar verticalmente os itens */
         color: #efefef; /* Cor do texto */
-
     }
 
     .header .navbar ul {
@@ -143,10 +127,6 @@
         transition: bottom 0.3s ease;
     }
 
-
-    }
-
-    /* Estilo do menu hamburguer */
     .menu-toggle {
         display: block; /* Mostrar o ícone do menu hamburguer */
         color: #efefef; /* Cor do ícone */
@@ -155,12 +135,11 @@
     }
 
     .menu-toggle:hover {
-        color: #ffffff; /* Cor do ícone ao passar o mouse */
+        color: #5b3124; /* Cor do ícone ao passar o mouse */
     }
 
     .mobile-menu {
-        display: none; /* Inicialmente oculto */
-        position: absolute;
+        position: absolute; /* Posição absoluta para cobrir a tela inteira */
         top: 100%; /* Abaixo do cabeçalho */
         left: 0;
         width: 100%;
@@ -197,5 +176,29 @@
     .mobile-menu.active {
         display: block;
     }
-    /* Estilos para os ícones de redes sociais */
+}
+
+/* Estilos para telas maiores */
+@media screen and (min-width: 768px) {
+    .header .navbar {
+        display: flex; /* Exibir menu principal */
+        justify-content: space-between; /* Espaço entre os itens do menu */
+        align-items: center; /* Centralizar verticalmente os itens */
+    }
+
+    .menu-toggle {
+        display: none; /* Ocultar o ícone do menu hamburguer em telas maiores */
+    }
+
+    .mobile-menu {
+        display: none; /* Ocultar o menu hamburguer em telas maiores */
+    }
+
+    .icons {
+        display: flex; /* Exibir ícones */
+    }
+
+    .social-icons {
+        display: none; /* Ocultar ícones de redes sociais em telas maiores */
+    }
 }
